# ipo-case-study

./: .gitignore  README.md  flake.nix  ipo-dataset.ipynb  main.py  pyproject.toml
.virtual_documents/notebook/: ipo-eda.ipynb
.virtual_documents/notebooks/: analysis.ipynb  ipo-eda.ipynb  summary_stats.ipynb
data/: processed_data.csv
notebooks/: bank_count_analysis.ipynb  bank_group_analysis.ipynb  final_analysis.ipynb  financials.ipynb  ipo-eda.ipynb  keyword_count_analysis.ipynb  linear_regression.ipynb  summary_stats.ipynb  target_analysis.ipynb
notebooks/.ipynb_checkpoints/: analysis-checkpoint.ipynb  bank_count_analysis-checkpoint.ipynb  bank_group_analysis-checkpoint.ipynb  financials-checkpoint.ipynb  ipo-eda-checkpoint.ipynb  keyword_count_analysis-checkpoint.ipynb  summary_stats-checkpoint.ipynb  target_analysis-checkpoint.ipynb
