[project]
name = "ml-ipo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13.9"
dependencies = [
    "jupyterlab>=4.5.0",
    "jupyterlab-vim>=4.1.4",
    "matplotlib>=3.10.7",
    "numpy>=2.3.5",
    "pandas>=2.3.3",
    "scipy>=1.16.3",
    "seaborn>=0.13.2",
]
